# DiscordGoogleCalendar

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CyberSecurityAnalysis.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: deployment.md
review_process/: report_template.md  review_agents.md
review_process/reviews/todo-01-project-foundation/: agent_1_cyber_security.md  agent_2_quality_code.iteration_2.md  agent_2_quality_code.md  agent_3_testing_code.iteration_2.md  agent_3_testing_code.md  agent_4_integration_test.md  agent_5_documentation.iteration_2.md  agent_5_documentation.md
review_process/reviews/todo-02-config-domain-security/: agent_1_cyber_security.iteration_2.md  agent_1_cyber_security.iteration_3.md  agent_1_cyber_security.md  agent_2_quality_code.md  agent_3_testing_code.md  agent_4_integration_test.md  agent_5_documentation.iteration_2.md  agent_5_documentation.md
review_process/reviews/todo-03-google-calendar-read-path/: agent_1_cyber_security.iteration_2.md  agent_1_cyber_security.iteration_3.md  agent_1_cyber_security.md  agent_2_quality_code.iteration_2.md  agent_2_quality_code.md  (+5 more)
src/discordcalendarbot/: __init__.py  __main__.py  app.py  cli.py  config.py  logging_config.py  operator_commands.py
tests/: __init__.py  test_config_domain_security.py  test_daily_digest_service_scheduler.py  test_discord_bot_publisher.py  test_docs_ci.py  test_google_calendar_read_path.py  test_logging_config.py  test_operator_commands.py  test_project_foundation.py  test_sqlite_repository.py  test_tag_digest_discord_formatting.py
(+66 files in other folders)
