[project]
name = "discordcalendarbot"
version = "0.1.1"
description = "Discord bot that posts tagged Google Calendar daily digests."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.10.4",
    "aiosqlite>=0.20.0",
    "discord.py>=2.4.0",
    "google-api-python-client>=2.137.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
discordcalendarbot = "discordcalendarbot.cli:main"

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.8",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["A", "ANN", "B", "C4", "E", "F", "I", "N", "PERF", "PL", "RUF", "S", "UP", "W"]
ignore = [
    "ANN401",
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]
